--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,6 +4,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+}
+
+.containerDatos{
+  display: flex;
 }
 
 .title{
